[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Player/Player.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="CapsuleMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.678431, 0, 0, 1 )

[node name="Player" type="KinematicBody"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 0, 0 )
script = ExtResource( 1 )

[node name="BodyColl" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="BodyMesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="BodyMesh2" type="MeshInstance" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.499997, -0.00161451, 0, 0.00161451, 0.499997, 0, 0, -1.23996 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Cameras" type="Spatial" parent="."]

[node name="FirstPersonCam" type="Camera" parent="Cameras"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.15563e-07, 1.34735, -0.872036 )
fov = 90.0

[node name="ThirdPersonCam" type="Camera" parent="Cameras"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 6, 5 )
current = true
fov = 90.0

[node name="BirdsEyeCam" type="Camera" parent="Cameras"]
transform = Transform( 1, 0, 0, 0, 1.19249e-08, 1, 0, -1, 1.19249e-08, 0, 10.776, 0 )
fov = 90.0

[node name="Weapons" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.14393, 0.22017, -0.553291 )
